# connect4-ai

./: GAME_README.md  README.md  build-wasm.sh  index.html  package-lock.json  package.json  test-ai.mjs  vite.config.ts  write_appfiles.py  write_sources.py  write_usegame.py
assets/: ai-worker-C294qKS3.js  index-BUsrMNCy.js  index-CtzoHfcw.css
cpp/: CMakeLists.txt  ai.cpp  ai.hpp  bindings.cpp  connect4.cpp  connect4.hpp
src/: App.css  App.tsx  index.css
src/components/: Board.tsx  Cell.tsx  DifficultySelector.tsx  GameInfo.tsx  GameModeSelector.tsx  Stats.tsx  TttBoard.tsx
src/hooks/: useGame.ts
src/lib/: connect4-ai.ts  connect4-engine.ts  sound.ts  ttt-ai.ts  ttt-engine.ts  wasm-loader.ts
src/types/: game.ts
src/workers/: ai-worker.ts
